--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -16,14 +16,14 @@
         <div class="testimonaile">
 
             <div class="jone">
-                <div>
+                <div class="img">
                     <img src="img/images (1).jfif" alt="">
                 </div>
                 <div class="personne">
                     <h2>desinger</h2>
                     <h3>Web Developer</h3>
                 </div>
-                <div>
+                <div class="para">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque accusamus, dicta vel provident magnam vero dolorem modi amet et expedita necessitatibus laudantium numquam mollitia officiis unde iure sit minus placeat.
                     </p>
@@ -55,7 +55,7 @@
                     <h2>desinger</h2>
                     <h3>Project Manager</h3>
                 </div>
-                <div>
+                <div class="para">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque accusamus, dicta vel provident magnam vero dolorem modi amet et expedita necessitatibus laudantium numquam mollitia officiis unde iure sit minus placeat.
                     </p>
@@ -88,7 +88,7 @@
                     <h2>desinger</h2>
                     <h3>Mobile Developer</h3>
                 </div>
-                <div>
+                <div class="para">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque accusamus, dicta vel provident magnam vero dolorem modi amet et expedita necessitatibus laudantium numquam mollitia officiis unde iure sit minus placeat.
                     </p>
