FAIRE LA STYLISATION DE VERSION MOBILE
PREMIER UPDATE

--- a/index1.html
+++ b/index1.html
@@ -16,7 +16,11 @@
 
     <header class="hhead">
         <div class="hfixe">
-            <img src="/Images/Logo2.png" alt="logo" class="hlogo">
+            <input type="checkbox" id="hchk">
+            <label for="chk" class="hshow-btn">
+                <i class="fas fa-ellipsis-h"></i>
+             </label>
+            <img src="Images/Logo2.png" alt="logo" class="hlogo">
             <nav>
                 <ul class="hmenu">
                     <li>
@@ -37,6 +41,9 @@
                     <li>
                         <a href="#"><i class="fas fa-search"></i></a>
                     </li>
+                    <label for="chk" class="hhideen-btn">
+                        <i class="fas fa-times"></i>
+                      </label>
                 </ul>
             </nav>
         </div>
