--- a/team and client/index.html
+++ b/team and client/index.html
@@ -143,7 +143,7 @@
 
             <div class="client">
                 <i class="fab fa-paypal"></i>
-            </div>-
+            </div>
 
             <div class="client">
                 <i class="fab fa-apple"></i>
@@ -201,20 +201,28 @@
     </section>
     <!----------------------------------- end second section ------------------------------->
 
+
+
+    <!--------------------------------------- start footer------------------------------- -->
     <footer>
 
 
         <div class="projet">
+
             <div>
                 <h3>Lancer un projet</h3>
             </div>
+
             <div>
                 <i class="fas fa-arrow-right"></i>
             </div>
+
         </div>
 
 
         <div class="footer-content ">
+
+
             <div class=" contact flaot">
                 <h4 class="cnt">contact@webagency.com.ma</h4>
                 <h4 class="num">+121 34 67 83 79</h4>
@@ -248,6 +256,8 @@
 
 
     </footer>
+
+    <!------------------------------------- end footer ----------------------------------->
 
 </body>
 
