--- a/a propos (omar)/index.html
+++ b/a propos (omar)/index.html
@@ -17,7 +17,7 @@
        </div>  
     </div>
       <!---------------------------premier_lign----------------------------------->
-<div class="fixed" >   
+<div class="afixed" >   
 
 
 
