voilà ma dernier commit pour aujourd'hui.

--- a/index1.html
+++ b/index1.html
@@ -15,38 +15,28 @@
     <!----------------------------------- start header section ------------------------------->
 
     <header class="hhead">
-        <div class="hfixe">
-            <input type="checkbox" id="hchk">
-            <label for="chk" class="hshow-btn">
-                <i class="fas fa-ellipsis-h"></i>
-             </label>
-            <img src="Images/Logo2.png" alt="logo" class="hlogo">
-            <nav>
-                <ul class="hmenu">
-                    <li>
-                        <a href="#">ACCUEIL</a>
-                    </li>
-                    <li>
-                        <a href="#">A PROPOS</a>
-                    </li>
-                    <li>
-                        <a href="#hgrid">NOS SERVICES</a>
-                    </li>
-                    <li>
-                        <a href="#">PRICING</a>
-                    </li>
-                    <li>
-                        <a href="#">CONTACTEZ NOUS</a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fas fa-search"></i></a>
-                    </li>
-                    <label for="chk" class="hhideen-btn">
-                        <i class="fas fa-times"></i>
-                      </label>
-                </ul>
-            </nav>
+
+
+        <div class="header">
+            <h2 class="logo">You Web</h2>
+            <input type="checkbox" id="chk">
+            <label for="chk" class="show-menu-btn">
+              <i class="fas fa-ellipsis-h"></i>
+            </label>
+
+            <ul class="menu">
+                <a href="#">ACCUILE</a>
+                <a href="#">SERVICES</a>
+                <a href="#">A PROPOS</a>
+                <a href="#">PRICING</a>
+                <a href="#">CONTACTEZ NOUS</a>
+                <a href="#"><i class="fas fa-search"></i></a>
+                <label for="chk" class="hide-menu-btn">
+                <i class="fas fa-times"></i>
+              </label>
+            </ul>
         </div>
+
 
         <h1>On vous rappelle sous 24h</h1>
         <p class="hpara">Digitalisation en main</p>
