--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -11,6 +11,40 @@
 </head>
 
 <body>
+    <!-- ------------------------------header -->
+    <header class="hhead">
+        <div class="hfixe">
+            <img src="/Images/Logo2.png" alt="logo" class="hlogo">
+            <nav>
+                <ul class="hmenu">
+                    <li>
+                        <a href="#">ACCUEIL</a>
+                    </li>
+                    <li>
+                        <a href="#">A PROPOS</a>
+                    </li>
+                    <li>
+                        <a href="#hgrid">NOS SERVICES</a>
+                    </li>
+                    <li>
+                        <a href="#">PRICING</a>
+                    </li>
+                    <li>
+                        <a href="#">CONTACTEZ NOUS</a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fas fa-search"></i></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+        <h1>On vous rappelle sous 24h</h1>
+        <p class="hpara">Digitalisation en main</p>
+        <div class="halone"> <button class="hbtn"> SUBSCRIBE</button></div>
+
+    </header>
+    <!-- --------------------------------header -->
     <section>
         <h1>TESTIMONAILE</h1>
         <div class="testimonaile">
