--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -101,7 +101,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                 </div>
-                <div class="social">
+                <div class="social soc">
 
                     <i class="fab fa-facebook-square"></i>
                     <i class="fab fa-whatsapp-square"></i>
