--- a/index1.html
+++ b/index1.html
@@ -16,26 +16,28 @@
 
     <header class="hhead">
 
+        <nav>
+            <div class="header">
+                <h2 class="logo">You Web</h2>
+                <input type="checkbox" id="chk">
+                <label for="chk" class="show-menu-btn">
+      <i class="fas fa-ellipsis-h"></i>
+    </label>
 
-        <div class="header">
-            <h2 class="logo">You Web</h2>
-            <input type="checkbox" id="chk">
-            <label for="chk" class="show-menu-btn">
-              <i class="fas fa-ellipsis-h"></i>
-            </label>
+                <ul class="menu">
+                    <a href="#">ACCUEIL</a>
+                    <a href="#">SERVICES</a>
+                    <a href="#">A PROPOS</a>
+                    <a href="#">PRICING</a>
+                    <a href="#">CONTACTEZ NOUS</a>
+                    <a href="#"><i class="fas fa-search"></i></a>
+                    <label for="chk" class="hide-menu-btn">
+        <i class="fas fa-times"></i>
+      </label>
+                </ul>
+            </div>
+        </nav>
 
-            <ul class="menu">
-                <a href="#">ACCUILE</a>
-                <a href="#">SERVICES</a>
-                <a href="#">A PROPOS</a>
-                <a href="#">PRICING</a>
-                <a href="#">CONTACTEZ NOUS</a>
-                <a href="#"><i class="fas fa-search"></i></a>
-                <label for="chk" class="hide-menu-btn">
-                <i class="fas fa-times"></i>
-              </label>
-            </ul>
-        </div>
 
 
         <h1>On vous rappelle sous 24h</h1>
