--- a/service/index.html
+++ b/service/index.html
@@ -13,7 +13,30 @@
 <body>
     <!----------------------------------- start header section ------------------------------->
 
-   
+    <header class="hhead">
+
+        <nav>
+            <div class="header">
+                <h2 class="logo">You Web</h2>
+                <input type="checkbox" id="chk">
+                <label for="chk" class="show-menu-btn">
+      <i class="fas fa-ellipsis-h"></i>
+    </label>
+
+                <ul class="menu">
+                    <a href="#">ACCUEIL</a>
+                    <a href="#">SERVICES</a>
+                    <a href="#">A PROPOS</a>
+                    <a href="#">PRICING</a>
+                    <a href="#">CONTACTEZ NOUS</a>
+                    <a href="#"><i class="fas fa-search"></i></a>
+                    <label for="chk" class="hide-menu-btn">
+        <i class="fas fa-times"></i>
+      </label>
+                </ul>
+            </div>
+        </nav>
+
 
     <!----------------------------------- end  header section ------------------------------->
     <div class="service">
