début de ajouter header

--- a/team and client/index.html
+++ b/team and client/index.html
@@ -30,13 +30,10 @@
 
             <div class="abg"></div>
             <div class="title">
-                <h1>Notre Equipe</h1>
+                <h1>Pricing & Testimoniale</h1>
             </div>
-            <div class="para">
-                <p>Nous sommes une équipe de créateurs, de penseurs, d'explorateurs et de chanteurs de théâtre. Nous
-                    abordons le travail et jouons avec curiosité et expérimentation, en utilisant ce que nous apprenons
-                    pour
-                    créer des produits numériques significatifs qui se connectent avec les gens, tout comme vous.</p>
+            <div class="par">
+                <p>Section has not provided pricing information for this product or service. This is common practice for software vendors and service providers. Contact Section to obtain current pricing.</p>
 
             </div>
 
@@ -58,16 +55,22 @@
                 <img src="images/team_member1.jpg" alt="team_member1">
                 <h2>Mark Gale</h2>
                 <h3>Project Manager</h3>
-                <p>Mark aide nos clients à réaliser leur vision de marque dans l'espace numérique grâce à des conseils
-                    stratégiques et une gestion de projet rationalisée. Il aide également ses collègues musiciens à
-                    réaliser
-                    leur vision de groupe dans l'espace analogique en tant que bassiste indépendant. </p>
+                <p>Mark aide nos clients à réaliser leur vision de marque dans l'espace numérique grâce à des conseils stratégiques et une gestion de projet rationalisée. Il aide également ses collègues musiciens à réaliser leur vision de groupe dans l'espace
+                    analogique en tant que bassiste indépendant. </p>
 
                 <ul class="icon">
-                    <li><a href="#" class="icon-link"> <i class="fab fa-facebook-f fac"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-facebook-f fac"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a>
+                    </li>
                 </ul>
             </div>
 
@@ -77,15 +80,19 @@
                 <img src="images/h1-team-member-2.jpg" alt="h1-team-member-2">
                 <h2>Teegan Lincoln</h2>
                 <h3>Front-end Development</h3>
-                <p>Teegan est un passionné d'Internet avec un penchant pour embrasser la vie noob. Elle aime bricoler le
-                    code et ne trouve rien de plus satisfaisant que de donner vie aux designs. Hors ligne, le
-                    passe-temps de
-                    Teegan collectionne les passe-temps, le dernier étant le patinage artistique.</p>
+                <p>Teegan est un passionné d'Internet avec un penchant pour embrasser la vie noob. Elle aime bricoler le code et ne trouve rien de plus satisfaisant que de donner vie aux designs. Hors ligne, le passe-temps de Teegan collectionne les passe-temps,
+                    le dernier étant le patinage artistique.</p>
                 <ul class="icon">
                     <li><a href="#" class="icon-link"><i class="fab fa-facebook-f "></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a>
+                    </li>
                 </ul>
 
             </div>
@@ -94,16 +101,19 @@
                 <img src="images/Team-memeber-3.png" alt="Team-memeber-3">
                 <h2>Matt Boddy</h2>
                 <h3>Web Developer</h3>
-                <p>Pour toujours jouer avec la technologie. Matt aime se salir les mains avec toutes sortes de
-                    développement
-                    et d'administration de systèmes. Lorsque vous êtes loin de l'écran, Matt peut généralement être
-                    trouvé
-                    en classant les hamburgers par délicatesse.</p>
+                <p>Pour toujours jouer avec la technologie. Matt aime se salir les mains avec toutes sortes de développement et d'administration de systèmes. Lorsque vous êtes loin de l'écran, Matt peut généralement être trouvé en classant les hamburgers
+                    par délicatesse.</p>
                 <ul class="icon">
                     <li><a href="#" class="icon-link"><i class="fab fa-facebook-f fac"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a>
+                    </li>
                 </ul>
             </div>
 
@@ -112,15 +122,19 @@
                 <img src="images/team-member-.jpg" alt="team-member-4">
                 <h2>Kristy Ford</h2>
                 <h3>designer</h3>
-                <p>Kristy est obsédée par tout ce qui concerne le design. Perfectionniste dans l'âme, elle croit qu'un
-                    bon
-                    design est dans les détails. Quand elle ne fait pas mousser le design danois, vous pouvez la trouver
-                    illustrant, traquant de nouveaux desserts à essayer, achetant plus de plantes .</p>
+                <p>Kristy est obsédée par tout ce qui concerne le design. Perfectionniste dans l'âme, elle croit qu'un bon design est dans les détails. Quand elle ne fait pas mousser le design danois, vous pouvez la trouver illustrant, traquant de nouveaux
+                    desserts à essayer, achetant plus de plantes .</p>
                 <ul class="icon">
                     <li><a href="#" class="icon-link"><i class="fab fa-facebook-f fac"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a>
+                    </li>
                 </ul>
 
             </div>
@@ -248,9 +262,15 @@
             <div class="footer-icon flaot">
                 <ul class=" icon">
                     <li><a href="#" class="icon-link"><i class="fab fa-facebook-f fac"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a>
+                    </li>
                 </ul>
             </div>
         </div>
