--- a/service/index.html
+++ b/service/index.html
@@ -36,6 +36,7 @@
                 </ul>
             </div>
         </nav>
+        </header>
 
 
     <!----------------------------------- end  header section ------------------------------->
