finalisation de la page v.tablette

--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -33,7 +33,11 @@
   </label>
             </ul>
         </div>
-        <div class="back"></div>
+        <div class="back">
+            <img src="/img/bridge-1660417_1920.jpg" alt="">
+            <h1>Pricin & Testimoniale</h1>
+            <p>Section has not provided pricing information for this product or service. This is common practice for software vendors and service providers. Contact Section to obtain current pricing.</p>
+        </div>
     </nav>
     <!-- --------------------------------header -->
     <section>
