modification of navbar

--- a/index1.html
+++ b/index1.html
@@ -21,8 +21,8 @@
                 <h2 class="logo">You Web</h2>
                 <input type="checkbox" id="chk">
                 <label for="chk" class="show-menu-btn">
-      <i class="fas fa-ellipsis-h"></i>
-    </label>
+                    <i class="fas fa-ellipsis-h"></i>
+                </label>
 
                 <ul class="menu">
                     <a href="#">ACCUEIL</a>
@@ -32,8 +32,8 @@
                     <a href="#">CONTACTEZ NOUS</a>
                     <a href="#"><i class="fas fa-search"></i></a>
                     <label for="chk" class="hide-menu-btn">
-        <i class="fas fa-times"></i>
-      </label>
+                        <i class="fas fa-times"></i>
+                    </label>
                 </ul>
             </div>
         </nav>
@@ -55,7 +55,9 @@
             <div class="hleft"></div>
             <div class="hright">
                 <h2 class="htitle3">ABOUT <span>US</span></h2>
-                <p class="hpara">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
+                <p class="hpara">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima
+                    obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore
+                    eius, asperiores, dolorem amet! Iste?</p>
             </div>
         </div>
     </section1>
@@ -100,12 +102,13 @@
             <div class="hchild1">
                 <h2 class="htitle5">Vous avez un projet ?</h2>
                 <p class="p4">
-                    Vous recherchez une agence web créative, sérieuse et experte compétente pour développer votre productivité, activité et visibilité?
+                    Vous recherchez une agence web créative, sérieuse et experte compétente pour développer votre
+                    productivité, activité et visibilité?
                 </p>
                 <button class="hbtn">Faison connaisance</button>
                 <div class="child2">
                     <div class="SEPAR">
-                        <span><i class="fas fa-award fa-2x" ></i></span>
+                        <span><i class="fas fa-award fa-2x"></i></span>
                         <h1>Hey</h1>
                         <p>This is an informative card that will tell you something that's... well, important!</p>
                     </div>
@@ -120,7 +123,8 @@
 
     <section4 class="hsec4">
         <div class="hgrid3">
-            <p>DE LA STRATÉGIE AU DÉVELOPPEMENT WEB, NOUS REGROUPONS TOUTE LA CHAINE DE VALEUR DU NUMÉRIQUE. NOTRE TALENT EST À VOTRE DISPOSITION POUR VOUS ACCOMPAGNER DANS L’UNIVERS DIGITAL</p>
+            <p>DE LA STRATÉGIE AU DÉVELOPPEMENT WEB, NOUS REGROUPONS TOUTE LA CHAINE DE VALEUR DU NUMÉRIQUE. NOTRE
+                TALENT EST À VOTRE DISPOSITION POUR VOUS ACCOMPAGNER DANS L’UNIVERS DIGITAL</p>
             <button class="hbtn ">CONTACTEZ NOUS</button>
         </div>
     </section4>
@@ -135,9 +139,14 @@
             <div class="habg"></div>
             <div class="hslider">
                 <div class="hslides">
-                    <div class="hslide"><img src="Images/silver-imac-displaying-collage-photos-1779487.jpg" alt="slide"></div>
-                    <div class="hslide"><img src="Images/miami-seo-company-web-design-agency-website-design-company-126808.jpg" alt="slide"></div>
-                    <div class="hslide"><img src="Images/miami-seo-company-web-design-agency-website-design-company-126807.jpg" alt="slide"></div>
+                    <div class="hslide"><img src="Images/silver-imac-displaying-collage-photos-1779487.jpg" alt="slide">
+                    </div>
+                    <div class="hslide"><img
+                            src="Images/miami-seo-company-web-design-agency-website-design-company-126808.jpg"
+                            alt="slide"></div>
+                    <div class="hslide"><img
+                            src="Images/miami-seo-company-web-design-agency-website-design-company-126807.jpg"
+                            alt="slide"></div>
                 </div>
             </div>
         </div>
