--- a/index1.html
+++ b/index1.html
@@ -17,25 +17,18 @@
     <header class="hhead">
 
         <nav>
-            <div class="header">
-                <h2 class="logo">You Web</h2>
-                <input type="checkbox" id="chk">
-                <label for="chk" class="show-menu-btn">
-      <i class="fas fa-ellipsis-h"></i>
-    </label>
-
-                <ul class="menu">
-                    <a href="#">ACCUEIL</a>
-                    <a href="#">SERVICES</a>
-                    <a href="#">A PROPOS</a>
-                    <a href="#">PRICING</a>
-                    <a href="#">CONTACTEZ NOUS</a>
-                    <a href="#"><i class="fas fa-search"></i></a>
-                    <label for="chk" class="hide-menu-btn">
-        <i class="fas fa-times"></i>
-      </label>
-                </ul>
-            </div>
+            <input type="checkbox" id="hcheck">
+            <label for="check" class="hcheckbtn">
+              <i class="hfas fa-ellipsis-h"></i>
+            </label>
+            <label class="hlogo">You Web</label>
+            <ul>
+                <li><a class="hactive" href="#">ACCUEIL</a></li>
+                <li><a href="#">SERVICES</a></li>
+                <li><a href="#">Ä PROPOS</a></li>
+                <li><a href="#">PRACING</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
         </nav>
 
 
