STYLE DU NAV BAR

--- a/index1.html
+++ b/index1.html
@@ -17,19 +17,7 @@
     <header class="hhead">
 
         <nav>
-            <input type="checkbox" id="hcheck">
-            <label for="check" class="hcheckbtn">
-              <i class="hfas fa-ellipsis-h"></i>
-            </label>
-            <label class="hlogo">You Web</label>
-            <ul>
-                <li><a class="hactive" href="#">ACCUEIL</a></li>
-                <li><a href="#">SERVICES</a></li>
-                <li><a href="#">Ä PROPOS</a></li>
-                <li><a href="#">PRACING</a></li>
-                <li><a href="#">CONTACT</a></li>
-            </ul>
-            <div class="header">
+            <div class="hilmi-header">
                 <h2 class="logo">You Web</h2>
                 <input type="checkbox" id="chk">
                 <label for="chk" class="show-menu-btn">
