finalisation de page

--- a/footer/index.html
+++ b/footer/index.html
@@ -13,8 +13,30 @@
 
 <body>
 
+    <nav>
+        <div class="header">
+            <h2 class="logo">You Web</h2>
+            <input type="checkbox" id="chk">
+            <label for="chk" class="show-menu-btn">
+                <i class="fas fa-ellipsis-h"></i>
+            </label>
+
+            <ul class="menu">
+                <a href="#">ACCUEIL</a>
+                <a href="#">SERVICES</a>
+                <a href="#">A PROPOS</a>
+                <a href="#">PRICING</a>
+                <a href="#">CONTACTEZ NOUS</a>
+                <a href="#"><i class="fas fa-search"></i></a>
+                <label for="chk" class="hide-menu-btn">
+                    <i class="fas fa-times"></i>
+                </label>
+            </ul>
+        </div>
+    </nav>
+
     <div class=" fsection1 ">
-        <h1 class="fcontact">contactez nous </h1>
+        <h1 class="fcontact">Contactez-nous </h1>
     </div>
 
     <div class="finputs">
