modification de partie responsive

--- a/service/service.hmtl.html
+++ b/service/service.hmtl.html
@@ -13,41 +13,16 @@
 <body>
     <!----------------------------------- start header section ------------------------------->
 
-    <header class="hhead">
-
-        <nav>
-            <div class="header">
-                <h2 class="logo">You Web</h2>
-                <input type="checkbox" id="chk">
-                <label for="chk" class="show-menu-btn">
-      <i class="fas fa-ellipsis-h"></i>
-    </label>
-
-                <ul class="menu">
-                    <a href="#">ACCUEIL</a>
-                    <a href="#">SERVICES</a>
-                    <a href="#">A PROPOS</a>
-                    <a href="#">PRICING</a>
-                    <a href="#">CONTACTEZ NOUS</a>
-                    <a href="#"><i class="fas fa-search"></i></a>
-                    <label for="chk" class="hide-menu-btn">
-        <i class="fas fa-times"></i>
-      </label>
-                </ul>
-            </div>
-        </nav>
-        </
 
 
     <!----------------------------------- end  header section ------------------------------->
     <div class="service">
         <h1 class="stitre"><span class="S0"> Nos</span> service</h1>
 
-        <div class="svido">
             <video class="svideo" controls>
                 <source src="media/vid-agence.mp4" type="video/mp4">
             </video>
-        </div>
+       
 
         <p class="Spara">Votre site Web est sans doute votre principal
             atoutmarketing, <span class="sp1"> s'il ne fait pas croître votre
@@ -57,7 +32,7 @@
         <div class="Ssection1">
 
 
-            <div class="spartie1 sec">
+            <div class="spartie1">
 
                 <h2 class="Spart1">développement web</h2>
                 <i class="fas fa-desktop "></i>
@@ -150,7 +125,7 @@
     </div>
 </body>
 
-<footer>
+<!-- <footer>
 
 
     <div class="projet">
@@ -175,7 +150,7 @@
                 <!-- <input class="text-input" type=" text" placeholder="votre email,votre message">
                 <br>
                 <input class="submit-input" type="submit" value="envoyer"> -->
-            </form>
+            <!-- </form>
         </div>
 
         <div class="footer-icon flaot">
@@ -186,7 +161,7 @@
                 <li><a href="#" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
             </ul>
         </div>
-    </div>
+    </div> -->
 
 
 
@@ -196,6 +171,6 @@
     </div> -->
 
 
-</footer>
+
 
 </html>
