modification en partie responsive

--- a/team and client/index.html
+++ b/team and client/index.html
@@ -23,9 +23,9 @@
                 </label>
 
                 <ul class="menu">
-                    <a href="#">ACCUEIL</a>
+                    <a href="/index1.html">ACCUEIL</a>
                     <a href="#">SERVICES</a>
-                    <a href="#">A PROPOS</a>
+                    <a href="/a propos (omar)/index.html">A PROPOS</a>
                     <a href="#">PRICING</a>
                     <a href="#">CONTACTEZ NOUS</a>
                     <a href="#"><i class="fas fa-search"></i></a>
