modification de navbar

--- a/team and client/index.html
+++ b/team and client/index.html
@@ -24,11 +24,12 @@
 
                 <ul class="menu">
                     <a href="/index1.html">ACCUEIL</a>
+                    <a href="#">ABOUT</a>
                     <a href="#">SERVICES</a>
                     <a href="/a propos (omar)/index.html">A PROPOS</a>
                     <a href="#">PRICING</a>
                     <a href="#">CONTACTEZ NOUS</a>
-                    <a href="#"><i class="fas fa-search"></i></a>
+
                     <label for="chk" class="hide-menu-btn">
                         <i class="fas fa-times"></i>
                     </label>
