--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -34,7 +34,7 @@
             </ul>
         </div>
         <div class="back">
-            <img src="/img/bridge-1660417_1920.jpg" alt="">
+            <img src="/img/bridge-1660417_1920.jpg" alt="" class="image">
             <h1>Pricin & Testimoniale</h1>
             <p>Section has not provided pricing information for this product or service. This is common practice for software vendors and service providers. Contact Section to obtain current pricing.</p>
         </div>
