--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -14,30 +14,41 @@
     <!-- ------------------------------header -->
     <nav>
 
-        <div class="header">
-            <h2 class="logo">You Web</h2>
-            <input type="checkbox" id="chk">
-            <label for="chk" class="show-menu-btn">
-             <i class="fas fa-ellipsis-h"></i>
-          </label>
+        <nav>
+            <div class="hilmi-header">
+                <h2 class="logo">You Web</h2>
+                <input type="checkbox" id="chk">
+                <label for="chk" class="show-menu-btn">
+                <i class="fas fa-ellipsis-h"></i>
+            </label>
 
-            <ul class="menu">
-                <a href="#">ACCUEIL</a>
-                <a href="#">SERVICES</a>
-                <a href="#">A PROPOS</a>
-                <a href="#">PRICING</a>
-                <a href="#">CONTACTEZ NOUS</a>
-                <a href="#"><i class="fas fa-search"></i></a>
-                <label for="chk" class="hide-menu-btn">
-    <i class="fas fa-times"></i>
-  </label>
-            </ul>
+                <ul class="menu">
+                    <a class="active" href="#">ACCUEIL</a>
+                    <a href="#">ABOUT</a>
+                    <a href="#">SERVICES</a>
+                    <a href="#">A PROPOS</a>
+                    <a href="#">PRICING</a>
+                    <a href="#">CONTACT </a>
+
+                    <label for="chk" class="hide-menu-btn">
+                   
+                </label>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="header">
+            <div class="abg"></div>
+            <div class="title">
+                <h1>Pricin & Testimoniale</h1>
+            </div>
+            <div class="paras">
+                <p>Section has not provided pricing information for this product or service. This is common practice for software vendors and service providers. Contact Section to obtain current pricing.</p>
+            </div>
         </div>
-        <div class="back">
-            <img src="/img/bridge-1660417_1920.jpg" alt="" class="image">
-            <h1>Pricin & Testimoniale</h1>
-            <p>Section has not provided pricing information for this product or service. This is common practice for software vendors and service providers. Contact Section to obtain current pricing.</p>
-        </div>
+
+        
+
     </nav>
     <!-- --------------------------------header -->
     <section>
