--- a/a propos (omar)/index.html
+++ b/a propos (omar)/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title></title>
   </head>
@@ -11,27 +12,29 @@
       <!---------------------------Qui_sommes_nous------------------------------->
       
     <div class="aheader">
-      <nav class="tiyara">
-        <div class="header">
+      <nav>
+        <div class="hilmi-header">
             <h2 class="logo">You Web</h2>
             <input type="checkbox" id="chk">
             <label for="chk" class="show-menu-btn">
-  <i class="fas fa-ellipsis-h"></i>
-</label>
+            <i class="fas fa-ellipsis-h"></i>
+        </label>
 
             <ul class="menu">
-                <a href="#">ACCUEIL</a>
+                <a class="active" href="#">ACCUEIL</a>
+                <a href="#">ABOUT</a>
                 <a href="#">SERVICES</a>
                 <a href="#">A PROPOS</a>
                 <a href="#">PRICING</a>
-                <a href="#">CONTACTEZ NOUS</a>
-                <a href="#"><i class="fas fa-search"></i></a>
+                <a href="#">CONTACT </a>
+
                 <label for="chk" class="hide-menu-btn">
-    <i class="fas fa-times"></i>
-  </label>
+                
+            </label>
             </ul>
         </div>
     </nav>
+
 
         <div class="abg"></div>
        <div class="center">
