modifications au niveau de navbar et footer

--- a/a propos (omar)/index.html
+++ b/a propos (omar)/index.html
@@ -89,9 +89,9 @@
             COMPLET DANS L’UNIVERSDU 
             DIGITAL”</p>
             <div>
-           <img src="img/team_member1.jpg"> </div>
+           <img src="img/team_member1.jpg"> 
            <h3>	MARK GALE<br>
-            <span>DIRECTEUR</span></h3>
+            <span>DIRECTEUR</span></h3></div>
 
       </div>
       
@@ -144,7 +144,7 @@
 
 </div>  
      <!------------------------------------------------footer--------------------------------------->
-    <footer>
+    <footer class="footer">
 
 
       <div class="projet">
