--- a/service/service.hmtl.html
+++ b/service/service.hmtl.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <!----------------------------------- start header section ------------------------------->
+
     <!------------------------------------- debut-head de service----------------------------------------------------------->
     <div class="service">
 
@@ -23,8 +25,8 @@
         </video>
 
 
-        <p class="Spara">Votre site Web est sans doute votre principal
-            atoutmarketing, <span class="sp1"> s'il ne fait pas croître
+        <p class="Spara">Votre site Web est sans doute votre principal atoutmarketing, <span class="sp1"> s'il ne fait
+                pas croître
                 votre entreprise, il est temps d'en créer un nouveau </span>
         </p>
         <!-----------------------------fin- de head service------------------------------------------------------------------------------>
@@ -38,15 +40,12 @@
 
                 <i class="fas fa-desktop "></i>
 
-                <p class="para1">Nous créons des sites web
-                    et des solutions innovantes,
-                    responsives et sur mesure
-                    qui fournissent une première
-                    impression puissanteet
-                    qui fonctionnent parfaitement.<br>
+                <p class="para1">Nous créons des sites web et des solutions innovantes, responsives et sur mesure qui
+                    fournissent une première impression puissanteet qui fonctionnent parfaitement.<br>
 
                     <a href="https://www.edgybrain.com/creation-developpement-web/" target="_self">
-                        <button class="btn">voir plus</button></a></p>
+                        <button class="btn">voir plus</button></a>
+                </p>
 
             </div>
 
@@ -58,12 +57,14 @@
 
                 <i class="fas fa-microphone "></i>
 
-                <p class="para1">Nous livrons des stratégies marketing
-                    qui génèrent plus de prospects plus de ventes
-                    et de profits pour vous et qui assuren trafic<br>
+                <p class="para1">Nous livrons des stratégies marketing qui
+                    génèrent plus de prospects plus de ventes et
+                    de profits pour vous et qui assuren trafic<br>
 
                     <a href="https://www.edgybrain.com/digital-marketing/" target="_self">
-                        <button class="btn">voir plus</button></a></p>
+
+                        <button class="btn">voir plus</button></a>
+                </p>
             </div>
 
 
@@ -73,15 +74,13 @@
 
                 <i class="fas fa-fire"></i>
 
-                <p class="para1">Le Branding est au cœur
-                    de tout ce que nous faisons
-                    Nous utilisons la stratégie et le design
-                    pour relier les marques et les clients à travers
-                    des choses qu’ils aimentt<br>
-
+                <p class="para1">Le Branding est au cœur de tout ce que nous faisons
+                    Nous utilisons la stratégie et le
+                    design pour relier les marques et les clients à travers des choses qu’ils aimentt<br>
                     <a href="https://www.edgybrain.com/brand-strategy/">
 
-                        <button class="btn">voir plus</button></a></p>
+                        <button class="btn">voir plus</button></a>
+                </p>
             </div>
 
 
@@ -91,71 +90,60 @@
 
                 <i class="fas fa-drafting-compass"></i>
 
-                <p class="para1">Nous savons bien que votre site Web
-                    est le cœur de votr eprésence Nous créons des
-                    expériences-utilisateur uniques spécifiquement
-                    votre entreprise<br>
-
+                <p class="para1">Nous savons bien que votre site Web est le cœur de votr
+                    eprésence Nous créons des
+                    expériences-utilisateur uniques spécifiquement votre entreprise<br>
                     <a href="https://www.edgybrain.com/ux-web-design%E2%80%8B/" target="_self">
-                        <button class="btn">voir plus</button></a></p>
+
+                        <button class="btn">voir plus</button></a>
+                </p>
             </div>
+
             <div class="Spartie5 sec">
 
-                <h2 class="Spart1">développement mobile</h2>
+                <h2 class="Spart1">ux & web design</h2>
 
-                <i class="fas fa-mobile-alt "></i>
+                <i class="fas fa-drafting-compass"></i>
 
-                <p class="para1">Avec la bonne application vous pouvez
-                    surmonter la concurrence et faire en sorte que votre
-                    entreprise se démarque sur un marché très concurrentiel<br>
+                <p class="para1">Nous savons bien que votre site Web est le cœur de votr eprésence Nous créons des
+                    expériences-utilisateur uniques spécifiquement votre entreprise<br>
 
-                    <a href="https://www.edgybrain.com/developpement-mobile/" target="_self">
-
-                        <button class="btn">voir plus</button></a></p>
+                    <a href="https://www.edgybrain.com/ux-web-design%E2%80%8B/" target="_self">
+                        <button class="btn">voir plus</button></a>
+                </p>
             </div>
 
             <div class="Spartie6 sec">
 
                 <h2 class="Spart1">conception graphique</h2>
-
                 <i class="fas fa-desktop "></i>
-
-                <p class="para1">Nous combinons l’art et la technologie
-                    pour communiquer des idées à travers des images et
-                    attirerl’attention des utilisateurs vers votre business<br>
-
+                <p class="para1">Nous combinons l’art et la technologie pour communiquer des idées à travers des images
+                    et attirerl’attention des utilisateurs vers votre business<br>
                     <a href="https://www.edgybrain.com/conception-design-graphique/" target="_self">
-                        <button class="btn">voir plus</button></a></p>
+                        <button class="btn">voir plus</button></a>
+                </p>
             </div>
+        </div>
 
+
+        <div class="ssection3">
+            <h3 class="StitreD">Apprenez à nous connaitre sur notre page</h3>
+            <h3 class="StitreF">"Qui sommes-<span class="sp2">nous"</span></h3>
+            <button class="btb">Bienvenu chez-nous</button><br>
+            <button class="btR ">Roteur</button>
+            <h4 class="StitreF ser">Trouvez -<span class="sp2"> Nous :</span></h4>
+            <div>
+                <i class="fab fa-facebook fa-2x"></i>
+                <i class="fab fa-linkedin-in fa-2x"></i>
+                <i class="fab fa-twitter fa-2x"></i>
+            </div>
         </div>
     </div>
-    </di>
-    <!-----------------------------fin-section 1 service------------------------------------------------------------------------------>
-    <!-----------------------------debut-footre service------------------------------------------------------------------------------->
-
-    <div class="ssection3">
-
-        <h3 class="StitreD">Apprenez à nous connaitre sur notre page</h3>
-
-        <h3 class="StitreF">"Qui sommes-<span class="sp2">nous"</span></h3>
-
-        <button class="btb">Bienvenu chez-nous</button><br>
-
-        <button class="btR ">Roteur</button>
-
-        <h4 class="StitreF ser">Trouvez -<span class="sp2"> Nous :</span></h4>
-
-        <div>
-            <i class="fab fa-facebook fa-2x"></i>
-
-            <i class="fab fa-linkedin-in fa-2x"></i>
-
-            <i class="fab fa-twitter fa-2x"></i>
-        </div>
-    </div>
-    </div>
-    <!---------------------------------fin de footer----------------------------------------------------------------------------->
 </body>
+
+<footer>
+
+    <!---------------------------------fin de footer----------------------------------------------------------------------------->
+    </body>
 
 </html>
