partie service test de modification

--- a/service/service.hmtl.html
+++ b/service/service.hmtl.html
@@ -130,7 +130,7 @@
             <h3 class="StitreD">Apprenez à nous connaitre sur notre page</h3>
             <h3 class="StitreF">"Qui sommes-<span class="sp2">nous"</span></h3>
             <button class="btb">Bienvenu chez-nous</button><br>
-            <button class="btR ">Roteur</button>
+            <button class="btR ">Retour</button>
             <h4 class="StitreF ser">Trouvez -<span class="sp2"> Nous :</span></h4>
             <div>
                 <i class="fab fa-facebook fa-2x"></i>
