rasenblement des section

--- a/index1.html
+++ b/index1.html
@@ -27,14 +27,14 @@
 
                     <ul class="menu">
                         <a class="active" href="#">ACCUEIL</a>
-                        <a href="#">ABOUT</a>
-                        <a href="#">SERVICES</a>
-                        <a href="#">A PROPOS</a>
-                        <a href="#">PRICING</a>
-                        <a href="#">CONTACT </a>
+                        <a href="/team and client/index.html">ABOUT</a>
+                        <a href="/service/service.hmtl.html">SERVICES</a>
+                        <a href="/a propos (omar)/">A PROPOS</a>
+                        <a href="/section-pricing/index.html">PRICING</a>
+                        <a href="/footer/index.html">CONTACT </a>
 
                         <label for="chk" class="hide-menu-btn">
-                        <i class="fas fa-times"></i>
+                        
                     </label>
                     </ul>
                 </div>
