--- a/footer/index.html
+++ b/footer/index.html
@@ -13,26 +13,28 @@
     <header class="hhead">
 
         <nav>
-            <div class="header">
+            <div class="hilmi-header">
                 <h2 class="logo">You Web</h2>
                 <input type="checkbox" id="chk">
                 <label for="chk" class="show-menu-btn">
-      <i class="fas fa-ellipsis-h"></i>
-    </label>
+                <i class="fas fa-ellipsis-h"></i>
+            </label>
 
                 <ul class="menu">
-                    <a href="#">ACCUEIL</a>
-                    <a href="#">SERVICES</a>
-                    <a href="#">A PROPOS</a>
-                    <a href="#">PRICING</a>
-                    <a href="#">CONTACTEZ NOUS</a>
-                    <a href="#"><i class="fas fa-search"></i></a>
+                    <a class="active" href="/index1.html">ACCUEIL</a>
+                    <a href="#">ABOUT</a>
+                    <a href="/service/service.hmtl.html">SERVICES</a>
+                    <a href="/a propos (omar)/index.html">A PROPOS</a>
+                    <a href="/section-pricing/index.html">PRICING</a>
+                    <a href="/footer/index.html">CONTACT </a>
+
                     <label for="chk" class="hide-menu-btn">
-        <i class="fas fa-times"></i>
-      </label>
+                   
+                </label>
                 </ul>
             </div>
         </nav>
+        
       <div class=" fsection1 ">
        <h1 class="fcontact">contactez nous </h1>
       </div>
