--- a/team and client/index.html
+++ b/team and client/index.html
@@ -24,12 +24,12 @@
             </label>
 
                 <ul class="menu">
-                    <a class="active" href="#">ACCUEIL</a>
+                    <a class="active" href="/index1.html">ACCUEIL</a>
                     <a href="#">ABOUT</a>
-                    <a href="#">SERVICES</a>
-                    <a href="#">A PROPOS</a>
-                    <a href="#">PRICING</a>
-                    <a href="#">CONTACT </a>
+                    <a href="/service/service.hmtl.html">SERVICES</a>
+                    <a href="/a propos (omar)/index.html">A PROPOS</a>
+                    <a href="/section-pricing/index.html">PRICING</a>
+                    <a href="/footer/index.html">CONTACT </a>
 
                     <label for="chk" class="hide-menu-btn">
                    
