--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul class="menu">
                         <a class="active" href="#">ACCUEIL</a>
                         <a href="/team and client/index.html">ABOUT</a>
-                        <a href="/service/service.hmtl">SERVICES</a>
+                        <a href="/service/service.html">SERVICES</a>
                         <a href="/a propos (omar)/">A PROPOS</a>
                         <a href="/section-pricing/index.html">PRICING</a>
                         <a href="/footer/index.html">CONTACT </a>
