--- a/team and client/index.html
+++ b/team and client/index.html
@@ -24,7 +24,7 @@
             </label>
 
                 <ul class="menu">
-                    <a class="active" href="/index1.html">ACCUEIL</a>
+                    <a class="active" href="/index.html">ACCUEIL</a>
                     <a href="#">ABOUT</a>
                     <a href="/service/service.hmtl.html">SERVICES</a>
                     <a href="/a propos (omar)/index.html">A PROPOS</a>
