ORGANISATION DU CODE

--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,7 @@
                 </label>
 
                 <ul class="menu">
-                    <a class="active" href="#">ACCUEIL</a>
+                    <a href="#">ACCUEIL</a>
                     <a href="/team and client/index.html">ABOUT</a>
                     <a href="/service/service.html">SERVICES</a>
                     <a href="/a propos (omar)/">A PROPOS</a>
