FINALISATION DE PAGE V2

--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>pricing & testimoniale</title>
 </head>
@@ -38,11 +38,8 @@
         </nav>
 
         <div class="header">
-            <div class="abg"><img src="img/bridge-1660417_1920.jpg" alt=""></div>
-            <div class="title">
+            <div class="container">
                 <h1>Pricin & Testimoniale</h1>
-            </div>
-            <div class="paras">
                 <p>Section has not provided pricing information for this product or service. This is common practice for software vendors and service providers. Contact Section to obtain current pricing.</p>
             </div>
         </div>
@@ -52,10 +49,10 @@
     </nav>
     <!-- --------------------------------header -->
     <section>
-        <h1>TESTIMONAILE</h1>
+        <h1>TESTIMONAILE:</h1>
         <div class="testimonaile">
 
-            <div class="jone">
+            <div class="jone comm">
                 <div class="img">
                     <img src="img/images (1).jfif" alt="">
                 </div>
@@ -87,7 +84,7 @@
             <!-- hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh -->
 
 
-            <div class="steve">
+            <div class="steve comm">
                 <div>
                     <img src="img/team-member-lg.jpg" alt="">
                 </div>
@@ -120,7 +117,7 @@
             <!-- kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk -->
 
 
-            <div class="ball">
+            <div class="ball comm">
                 <div>
                     <img src="img/howard-yu-thumbnail.jpg" alt="">
                 </div>
@@ -194,7 +191,7 @@
 
             <!-- lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll -->
 
-            <div class="professionnel">
+            <div class="pro">
                 <div>
                     <h2>Professionnel</h2>
                 </div>
