--- a/index1.html
+++ b/index1.html
@@ -59,8 +59,12 @@
         <div class="hgrid">
             <div class="hleft"></div>
             <div class="hright">
-                <h2 class="htitle3">ABOUT <span>US</span></h2>
-                <p class="hpara">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
+                <div>
+                    <h2 class="htitle3">ABOUT <span>US</span></h2>
+                </div>
+                <div>
+                    <p class="hpara">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi quibusdam porro minima obcaecati unde debitis nulla, veritatis quae minus culpa maiores laborum quidem officiis labore eius, asperiores, dolorem amet! Iste?</p>
+                </div>
             </div>
         </div>
     </section1>
@@ -84,10 +88,12 @@
 
                     <p>DIGITAL MARKETING</p>
                 </div>
+
                 <div class="htree">
 
                     <p>DESIGN DE MARQUE</p>
                 </div>
+
                 <div class="hfour">
 
                     <p>PRODUCTION DES PROJETS</p>
